// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > Snapshots > matches checked state snapshot 1`] = `
<button
  aria-checked="true"
  class="switch"
  data-state="checked"
  data-testid="switch"
  role="switch"
  type="button"
  value="on"
>
  <span
    class="switch__thumb"
    data-state="checked"
  />
</button>
`;

exports[`Switch > Snapshots > matches default snapshot 1`] = `
<button
  aria-checked="false"
  class="switch"
  data-state="unchecked"
  data-testid="switch"
  role="switch"
  type="button"
  value="on"
>
  <span
    class="switch__thumb"
    data-state="unchecked"
  />
</button>
`;

exports[`Switch > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-checked="false"
  class="switch"
  data-disabled=""
  data-state="unchecked"
  data-testid="switch"
  disabled=""
  role="switch"
  type="button"
  value="on"
>
  <span
    class="switch__thumb"
    data-disabled=""
    data-state="unchecked"
  />
</button>
`;
